--- a/components/tabs/tabs.css
+++ b/components/tabs/tabs.css
@@ -4,7 +4,16 @@
     justify-content: flex-start;
 }
 
-.tabs__input, .tabs__content{
+.tabs__input {
+    width: 0;
+    height: 0;
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    outline: none;
+}
+
+.tabs__content{
     display: none;
 }
 
@@ -15,12 +24,31 @@
     display: block;
 }
 
-#all-tabs:checked ~ .tabs__scroller .tabs__label-container label[for="all-tabs"],
-#elements:checked ~ .tabs__scroller .tabs__label-container label[for="elements"],
-#containers:checked ~ .tabs__scroller .tabs__label-container label[for="containers"],
-#templates:checked ~ .tabs__scroller .tabs__label-container label[for="templates"] {
+#all-tabs:checked ~ .tabs__scroller .tabs__label[for="all-tabs"],
+#elements:checked ~ .tabs__scroller .tabs__label[for="elements"],
+#containers:checked ~ .tabs__scroller .tabs__label[for="containers"],
+#templates:checked ~ .tabs__scroller .tabs__label[for="templates"],
+#all-tabs:focus ~ .tabs__scroller .tabs__label[for="all-tabs"],
+#elements:focus ~ .tabs__scroller .tabs__label[for="elements"],
+#containers:focus ~ .tabs__scroller .tabs__label[for="containers"],
+#templates:focus ~ .tabs__scroller .tabs__label[for="templates"],
+#all-tabs:hover ~ .tabs__scroller .tabs__label[for="all-tabs"],
+#elements:hover ~ .tabs__scroller .tabs__label[for="elements"],
+#containers:hover ~ .tabs__scroller .tabs__label[for="containers"],
+#templates:hover ~ .tabs__scroller .tabs__label[for="templates"] {
     color: var(--black);
     border-color: var(--black);
+}
+
+#all-tabs:focus ~ .tabs__scroller .tabs__label[for="all-tabs"],
+#elements:focus ~ .tabs__scroller .tabs__label[for="elements"],
+#containers:focus ~ .tabs__scroller .tabs__label[for="containers"],
+#templates:focus ~ .tabs__scroller .tabs__label[for="templates"],
+#all-tabs:hover ~ .tabs__scroller .tabs__label[for="all-tabs"],
+#elements:hover ~ .tabs__scroller .tabs__label[for="elements"],
+#containers:hover ~ .tabs__scroller .tabs__label[for="containers"],
+#templates:hover ~ .tabs__scroller .tabs__label[for="templates"] {
+    box-shadow: 0 0 0 0.4rem var(--primary-lighten);
 }
 
 .tabs__scroller {
@@ -42,9 +70,4 @@
 .tabs__label {
     cursor: pointer;
     border-bottom: 5px solid transparent;
-}
-
-.tabs__label:hover, .tabs__label:focus {
-    border-color: var(--black);
-    color: var(--black);
 }
